[NOID] Run spotlessApply